BusOne02/src/objects/Multichannel_Activity_vod__c.object
<CustomObject>
    <description>Captures the session information for a multichannel interaction.</description>
    <fields>
        <fullName>Account_External_ID_Map_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the Account External ID Mapping record the interaction is recorded for.</description>
        <label>Account External ID Map</label>
        <referenceTo>Account_External_ID_Map_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activities</relationshipLabel>
        <relationshipName>Multichannel_Activities_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Account the interaction is recorded for.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Multichannel Activities</relationshipLabel>
        <relationshipName>Multichannel_Activities_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Location_Latitude_vod__c</fullName>
        <description>Stores the latitude coordinate of the location where the key message is shown</description>
        <label>CLM Location Latitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLM_Location_Longitude_vod__c</fullName>
        <description>Stores the longitude coordinate of the location where the key message is shown</description>
        <label>CLM Location Longitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLM_Location_Services_Status_vod__c</fullName>
        <description>Indicates the state of location services at the time the key messages is shown
Enabled_vod - location services are turned on and the system is able to get the user&apos;s location
Disabled_vod - location services are turned off
No_connection_vod - no network connection</description>
        <label>CLM Location Services Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enabled_vod</fullName>
                </value>
                <value>
                    <fullName>Disabled_vod</fullName>
                </value>
                <value>
                    <fullName>No_connection_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Call record the activity is associated with.</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activities</relationshipLabel>
        <relationshipName>Multichannel_Activities_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>City which corresponds to the IP address of the viewer.</description>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name_vod__c</fullName>
        <description>Name of client software/browser used during the interaction</description>
        <label>Client Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_OS_vod__c</fullName>
        <description>Operating system used during the interaction</description>
        <label>Client OS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Type_vod__c</fullName>
        <description>Type of software the viewer used to access the Engage player.</description>
        <label>Client Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_vod__c</fullName>
        <description>Color for the Multichannel Activity</description>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clear</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Peach</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Teal</fullName>
                </value>
                <value>
                    <fullName>Olive</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Purple</fullName>
                </value>
                <value>
                    <fullName>Maroon</fullName>
                </value>
                <value>
                    <fullName>Steel</fullName>
                </value>
                <value>
                    <fullName>DarkSteel</fullName>
                </value>
                <value>
                    <fullName>Gray</fullName>
                </value>
                <value>
                    <fullName>DarkGray</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>DarkRed</fullName>
                </value>
                <value>
                    <fullName>DarkOrange</fullName>
                </value>
                <value>
                    <fullName>DarkPeach</fullName>
                </value>
                <value>
                    <fullName>DarkYellow</fullName>
                </value>
                <value>
                    <fullName>DarkGreen</fullName>
                </value>
                <value>
                    <fullName>DarkTeal</fullName>
                </value>
                <value>
                    <fullName>DarkOlive</fullName>
                </value>
                <value>
                    <fullName>DarkBlue</fullName>
                </value>
                <value>
                    <fullName>DarkPurple</fullName>
                </value>
                <value>
                    <fullName>DarkMaroon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <description>Two-letter country code (as specified by ISO3166) which corresponds to the IP address of the viewer.</description>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the debug parameter was set to true</description>
        <label>Debug?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Detail Group associated to the Multichannel Activity</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activities</relationshipLabel>
        <relationshipName>Multichannel_Activities1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_vod__c</fullName>
        <description>Type of device used during the interaction</description>
        <label>Device</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Event Management record the activity is associated with</description>
        <label>EM Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activities</relationshipLabel>
        <relationshipName>Multichannel_Activities_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Attendee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Event Attendee record the activity is associated with.</description>
        <label>Event Attendee</label>
        <referenceTo>Event_Attendee_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activities</relationshipLabel>
        <relationshipName>Multichannel_Activities_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IP_Address_vod__c</fullName>
        <description>IP Address of the viewer</description>
        <label>IP Address</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_vod__c</fullName>
        <description>Icon for the Multichannel Activity</description>
        <label>Icon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call_vod</fullName>
                </value>
                <value>
                    <fullName>Event_vod</fullName>
                </value>
                <value>
                    <fullName>Inventory_Monitoring_vod</fullName>
                </value>
                <value>
                    <fullName>Medical_Event_vod</fullName>
                </value>
                <value>
                    <fullName>Medical_Inquiry_vod</fullName>
                </value>
                <value>
                    <fullName>Multichannel_Activity_vod</fullName>
                </value>
                <value>
                    <fullName>Order_vod</fullName>
                </value>
                <value>
                    <fullName>Sent_Email_vod</fullName>
                </value>
                <value>
                    <fullName>Marketing_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MCD_Primary_Key_vod__c</fullName>
        <description>Primary key of the Marketing Cloud Data Extension record</description>
        <label>MCD Primary Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Preview_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies that the content was viewed from Media Preview</description>
        <label>Media Preview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Medical Event record the activity is associated with.</description>
        <label>Medical Event</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activities</relationshipLabel>
        <relationshipName>Multichannel_Activities_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Multichannel_Activity_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for tracking interactions with multiple attendees</description>
        <label>Parent Multichannel Activity</label>
        <referenceTo>Multichannel_Activity_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activities</relationshipLabel>
        <relationshipName>Multichannel_Activities_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organizer_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the internal user viewing the content</description>
        <label>Organizer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Multichannel_Activities_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product associated to the Multichannel Activity</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activities</relationshipLabel>
        <relationshipName>Multichannel_Activities_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_vod__c</fullName>
        <description>Record Type DeveloperName of the record. Field is
		referenced in trigger.</description>
        <label>Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Site_vod__c</fullName>
        <description>Website which links to the Engage host page.</description>
        <label>Referring Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_vod__c</fullName>
        <description>Two-letter or two digit region code which corresponds to the IP address of the viewer.</description>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saved_For_Later_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the record can be associated to an Account to generate a Call Report</description>
        <label>Saved by User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Email_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Sent Email record the activity is associated with.</description>
        <label>Sent Email</label>
        <referenceTo>Sent_Email_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activities</relationshipLabel>
        <relationshipName>Multichannel_Activities_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_Message_External_Id_vod__c</fullName>
        <description>External ID to determine which Sent Message to write Multichannel Activity for</description>
        <label>Sent Message External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Message_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Sent Message record the activity is associated with</description>
        <label>Sent Message</label>
        <referenceTo>Sent_Message_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activities</relationshipLabel>
        <relationshipName>Multichannel_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Id_vod__c</fullName>
        <description>Session Id from the browser</description>
        <label>Session Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Site the interaction came from.</description>
        <label>Site</label>
        <referenceTo>Site_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activities</relationshipLabel>
        <relationshipName>Multichannel_Activities_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_DateTime_vod__c</fullName>
        <description>Indicates the start date and time of the interaction.</description>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>The Territory of the User at the time the multichannel activity was created, if applicable. Not all multichannel activity will have a Territory.</description>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Duration_vod__c</fullName>
        <description>Aggregated duration (in seconds) filled in based on the child Multichannel Activity Lines</description>
        <label>Total Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies that the content was viewed during training</description>
        <label>Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL_vod__c</fullName>
        <description>Full URL which was clicked on by the viewer.</description>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Agent_vod__c</fullName>
        <description>String provided in the HTTP header which identifies the application type, operating system, software vendor, and software revision.</description>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id used by Veeva CRM</description>
        <externalId>true</externalId>
        <label>Veeva External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Viewport_Height_vod__c</fullName>
        <description>Height of the viewport when Engage player is launched.</description>
        <label>Viewport Height</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Viewport_Width_vod__c</fullName>
        <description>Width of the viewport when Engage player is launched</description>
        <label>Viewport Width</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Multichannel Activity</label>
    <nameField>
        <displayFormat>MCA-{000000000}</displayFormat>
        <label>Multichannel Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Multichannel Activities</pluralLabel>
    <recordTypes>
        <fullName>CLM_vod</fullName>
        <active>false</active>
        <description>Used for records created by CLM</description>
        <label>CLM_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cobrowse_vod</fullName>
        <active>true</active>
        <description>Used for records created by CoBrowse</description>
        <label>Cobrowse_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Engage_vod</fullName>
        <active>true</active>
        <description>Used for records created via Engage</description>
        <label>Engage_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_vod</fullName>
        <active>true</active>
        <description>Used for records created by Engage Events</description>
        <label>Event_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>